// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<fieldset>
  <legend data-weight="medium">
    Utdanningsnivå
  </legend>
  <p data-variant="default">
    Velg det høyeste utdanningsnivået du har fullført.
  </p>
  <div>
    <input
      id="utilities-useradiogroup--controlled-kindergarten"
      type="radio"
      value="kindergarten"
      name="_r_7_"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--controlled-kindergarten"
    >
      Barnehage
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--controlled-primary"
      type="radio"
      value="primary"
      name="_r_7_"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--controlled-primary"
    >
      Grunnskole
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--controlled-secondary"
      type="radio"
      value="secondary"
      name="_r_7_"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--controlled-secondary"
    >
      Videregående
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--controlled-higher"
      type="radio"
      value="higher"
      name="_r_7_"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--controlled-higher"
    >
      Høyere utdanning
    </label>
  </div>
</fieldset>
<hr
  aria-hidden="true"
  style="margin-top: var(--ds-size-4);"
>
<p
  data-variant="default"
  style="margin-block: var(--ds-size-2);"
>
  Du har valgt:
</p>
<div
  data-size="sm"
  style="display: flex; gap: 1rem;"
>
  <button
    data-variant="secondary"
    type="button"
  >
    Velg Barnehage
  </button>
  <button
    data-variant="secondary"
    type="button"
  >
    Velg Grunnskole
  </button>
</div>
`;

exports[`Default 1`] = `
<fieldset>
  <legend data-weight="medium">
    Velg din aldersgruppe.
  </legend>
  <div>
    <input
      id="utilities-useradiogroup--default-10-20"
      type="radio"
      value="10-20"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--default-10-20"
    >
      10-20 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--default-21-45"
      type="radio"
      value="21-45"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--default-21-45"
    >
      21-45 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--default-46-80"
      type="radio"
      value="46-80"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--default-46-80"
    >
      46-80 år
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="_r_2_"
  >
  </p>
</fieldset>
`;

exports[`Disabled 1`] = `
<fieldset>
  <legend data-weight="medium">
    Velg din aldersgruppe.
  </legend>
  <p data-variant="default">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <div>
    <input
      id="utilities-useradiogroup--disabled-10-20"
      disabled
      type="radio"
      value="10-20"
      name="my-disabled"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--disabled-10-20"
    >
      10-20 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--disabled-21-45"
      disabled
      type="radio"
      value="21-45"
      name="my-disabled"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--disabled-21-45"
    >
      21-45 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--disabled-46-80"
      disabled
      type="radio"
      value="46-80"
      name="my-disabled"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--disabled-46-80"
    >
      46-80 år
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="_r_i_"
  >
  </p>
</fieldset>
`;

exports[`Group 1`] = `
<fieldset>
  <legend data-weight="medium">
    Velg din aldersgruppe.
  </legend>
  <p data-variant="default">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <div>
    <input
      id="utilities-useradiogroup--group-10-20"
      type="radio"
      value="10-20"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--group-10-20"
    >
      10-20 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--group-21-45"
      type="radio"
      value="21-45"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--group-21-45"
    >
      21-45 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--group-46-80"
      type="radio"
      value="46-80"
      name="my-group"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--group-46-80"
    >
      46-80 år
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="_r_a_"
  >
  </p>
</fieldset>
`;

exports[`Read Only 1`] = `
<fieldset>
  <legend data-weight="medium">
    Velg din aldersgruppe.
  </legend>
  <p data-variant="default">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <div>
    <input
      id="utilities-useradiogroup--read-only-10-20"
      readonly
      type="radio"
      value="10-20"
      name="my-readonly"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--read-only-10-20"
    >
      10-20 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--read-only-21-45"
      readonly
      type="radio"
      value="21-45"
      name="my-readonly"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--read-only-21-45"
    >
      21-45 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--read-only-46-80"
      readonly
      type="radio"
      value="46-80"
      name="my-readonly"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--read-only-46-80"
    >
      46-80 år
    </label>
  </div>
  <p
    data-field="validation"
    hidden
    id="_r_m_"
  >
  </p>
</fieldset>
`;

exports[`With Error 1`] = `
<fieldset>
  <legend data-weight="medium">
    Velg din aldersgruppe.
  </legend>
  <p data-variant="default">
    Informasjonen blir brukt til å tilpasse innholdet på siden.
  </p>
  <div>
    <input
      id="utilities-useradiogroup--with-error-10-20"
      aria-describedby="_r_e_"
      aria-invalid="true"
      type="radio"
      value="10-20"
      name="my-error"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--with-error-10-20"
    >
      10-20 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--with-error-21-45"
      aria-describedby="_r_e_"
      aria-invalid="true"
      type="radio"
      value="21-45"
      name="my-error"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--with-error-21-45"
    >
      21-45 år
    </label>
  </div>
  <div>
    <input
      id="utilities-useradiogroup--with-error-46-80"
      aria-describedby="_r_e_"
      aria-invalid="true"
      type="radio"
      value="46-80"
      name="my-error"
    >
    <label
      data-weight="regular"
      for="utilities-useradiogroup--with-error-46-80"
    >
      46-80 år
    </label>
  </div>
  <p
    data-field="validation"
    id="_r_e_"
  >
    Du må velge en aldersgruppe
  </p>
</fieldset>
`;
